@@ -227,6 +227,8 @@ enum guTRACKS_ORDER {
 #define guRADIOSTATIONS_ORDER_NAME        0
 #define guRADIOSTATIONS_ORDER_BITRATE     1
 #define guRADIOSTATIONS_ORDER_LISTENERS   2
+#define guRADIOSTATIONS_ORDER_TYPE        3
+#define guRADIOSTATIONS_ORDER_NOWPLAYING  4
 
 enum guALBUMS_ORDER {
     guALBUMS_ORDER_NAME = 0,
